[tool.poetry]
name = "studycase-ifood"
version = "0.1.0"
description = ""
authors = ["ayasy <ayasy.elg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
ipykernel = "^6.29.4"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
